--- a/LP-BD1.html
+++ b/LP-BD1.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <td valign="bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Rosa-Parks-Options.html target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1687190238/Digital%20Library/BIG%20DREAMS/Rosa_Patks.png" alt="Rosa Parks" title="Rosa Parks - Lisbeth Kaiser
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Rosa-Parks-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1687190238/Digital%20Library/BIG%20DREAMS/Rosa_Patks.png" alt="Rosa Parks" title="Rosa Parks - Lisbeth Kaiser
 This book by Lisbeth Kaiser teaches 
 little ones about the fascinating 
 life of Rosa Parks, the civil rights 
