--- a/LP-BD1/Florence-Nightingale-Options.html
+++ b/LP-BD1/Florence-Nightingale-Options.html
@@ -11,7 +11,7 @@
         </tr>
         <tr>
             <td colspan="4" valign="middle" align="center">
-                <img src="https://res.cloudinary.com/firstterm/image/upload/v1686745481/Digital%20Library/BIG%20DREAMS/Florence_Nightingale.png" title="Florence Nightingale - Mª Isabel Sánchez Vegara
+                <img src="https://res.cloudinary.com/firstterm/image/upload/v1686745481/Digital%20Library/BIG%20DREAMS/Florence_Nightingale.png" alt="Florence Nightingale" title="Florence Nightingale - Mª Isabel Sánchez Vegara
 Growing up in an upper-class family, Florence Nightingale 
 was expected to find a husband and live a life of luxury — 
 but that kind of life wasn’t for her. Her calling was caring 
