--- a/LP-BD1/Ella-Fitzgerald-Options.html
+++ b/LP-BD1/Ella-Fitzgerald-Options.html
@@ -11,7 +11,7 @@
         </tr>
         <tr>
             <td colspan="4" valign="middle" align="center">
-                <img src="https://res.cloudinary.com/firstterm/image/upload/v1686477935/Digital%20Library/BIG%20DREAMS/Ella_Fitzgerald.png" title="Ella Fitzgerald - Mª Isabel Sánchez Vegara
+                <img src="https://res.cloudinary.com/firstterm/image/upload/v1686477935/Digital%20Library/BIG%20DREAMS/Ella_Fitzgerald.png" alt="Ella Fitzgerald" title="Ella Fitzgerald - Mª Isabel Sánchez Vegara
 Ella Fitzgerald grew up near Harlem, in New York, 
 where she was surrounded by music and dance. 
 After winning first prize in a talent competition 
