--- a/LP-BD1.html
+++ b/LP-BD1.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <td valign="bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Rosa%20Parks/html5.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1687190238/Digital%20Library/BIG%20DREAMS/Rosa_Patks.png" alt="Rosa Parks" title="Rosa Parks - Lisbeth Kaiser
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Rosa-Parks-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1687190238/Digital%20Library/BIG%20DREAMS/Rosa_Patks.png" alt="Rosa Parks" title="Rosa Parks - Lisbeth Kaiser
 This book by Lisbeth Kaiser teaches 
 little ones about the fascinating 
 life of Rosa Parks, the civil rights 
@@ -34,7 +34,7 @@ fighting for racial equality. In
 give up her seat for a white man on 
 a segregated bus, which sparked the 
 Montgomery Bus Boycott." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25502&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1686745481/Digital%20Library/BIG%20DREAMS/Florence_Nightingale.png" title="Florence Nightingale - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Florence-Nightingale-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1686745481/Digital%20Library/BIG%20DREAMS/Florence_Nightingale.png" alt="Florence Nightingale" title="Florence Nightingale - Mª Isabel Sánchez Vegara
 Growing up in an upper-class family, Florence Nightingale 
 was expected to find a husband and live a life of luxury — 
 but that kind of life wasn’t for her. Her calling was caring 
@@ -45,7 +45,7 @@ that the hospitals were so dirty that they were making
 people ill! This experience inspired her to lead a healthcare 
 revolution, and she became the mother of modern nursing, 
 introducing care practices still followed today." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25057&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1686477935/Digital%20Library/BIG%20DREAMS/Ella_Fitzgerald.png" title="Ella Fitzgerald - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Ella-Fitzgerald-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1686477935/Digital%20Library/BIG%20DREAMS/Ella_Fitzgerald.png" alt="Ella Fitzgerald" title="Ella Fitzgerald - Mª Isabel Sánchez Vegara
 Ella Fitzgerald grew up near Harlem, in New York, 
 where she was surrounded by music and dance. 
 After winning first prize in a talent competition 
@@ -55,7 +55,7 @@ features stylish and quirky illustrations and extra
 facts at the back, including a biographical timeline 
 with historical photos and a detailed profile of the 
 singer's life." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25058&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1686588417/Digital%20Library/BIG%20DREAMS/Laverne_Cox.png" title="Laverne Cox - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Laverne-Cox-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1686588417/Digital%20Library/BIG%20DREAMS/Laverne_Cox.png" alt="Laverne Cox" title="Laverne Cox - Mª Isabel Sánchez Vegara
 As a kid, Laverne felt different. Even though 
 she felt like a girl, she wasn’t allowed to 
 live her life as a girl. But she loved dancing 
@@ -63,7 +63,7 @@ and acting, and felt like she could be her
 true self under the spotlights on stage. After 
 school, she moved to New York City to study 
 ballet, and pursued acting." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25884&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1686901005/Digital%20Library/BIG%20DREAMS/Georgia_O_Keeffe.png" title="Georgia O'Keeffe - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Georgia-O-Keeffe-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1686901005/Digital%20Library/BIG%20DREAMS/Georgia_O_Keeffe.png" alt="Georgia O'Keeffe" title="Georgia O'Keeffe - Mª Isabel Sánchez Vegara
 As a child, little Georgia viewed the world differently 
 from other people. She roamed outdoors with her 
 sketch book, while other girls played. As an adult, 
@@ -73,14 +73,14 @@ This moving book features stylish and quirky illustrations
 and extra facts at the back, including a biographical 
 timeline with historical photos and a detailed profile 
 of the artist's life." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25886&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1687275887/Digital%20Library/BIG%20DREAMS/Ruth_Bader_Ginsburg.png" title="Ruth Bader Ginsburg - Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Ruth-Bader-Ginsburg-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1687275887/Digital%20Library/BIG%20DREAMS/Ruth_Bader_Ginsburg.png" alt="Ruth Bader Ginsburg" title="Ruth Bader Ginsburg - Isabel Sánchez Vegara
 Little Ruth’s mom taught her to be a lady—which 
 meant to be her own independent self. Ruth promised 
 herself she would do everything her mother didn’t 
 get the chance to do. And she excelled: at college, 
 as a law professor, and later on the supreme court 
 fighting gender discrimination." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25887&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1687340127/Digital%20Library/BIG%20DREAMS/Wilma_Rudolph.png" title="Wilma Rudolph - Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Wilma-Rudolph-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1687340127/Digital%20Library/BIG%20DREAMS/Wilma_Rudolph.png" alt="Wilma Rudolph" title="Wilma Rudolph - Isabel Sánchez Vegara
 Wilma was born into a family with 22 brothers 
 and sisters, in the segregated South. She 
 contracted polio in her early years and her 
@@ -107,7 +107,7 @@ women in sports around the world." onmouseover="this.width=155;this.height=185;"
         </tr>
         <tr>
             <td valign="bottom" align="center"></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25888&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689056493/Digital%20Library/BIG%20DREAMS/Dolly_Parton.png" title="Dolly Parton - Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Dolly-Parton-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689056493/Digital%20Library/BIG%20DREAMS/Dolly_Parton.png" alt="Dolly Parton" title="Dolly Parton - Isabel Sánchez Vegara
 This book follows the story of her life 
 for a young reader, from a young girl 
 with 11 siblings to being one of the 
@@ -123,7 +123,7 @@ Library, which sends monthly books for
 free to children who sign up.  Dolly 
 continues to inspire and perform to this 
 day, because she’s a striking character." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25889&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689104748/Digital%20Library/BIG%20DREAMS/Coco_Chanel.png" title="Coco Chanel - Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Coco-Chanel-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689104748/Digital%20Library/BIG%20DREAMS/Coco_Chanel.png" alt="Coco Chanel" title="Coco Chanel - Isabel Sánchez Vegara
 Following the death of her mother, Coco 
 spent her early life in an orphanage, 
 where she was taught how to use a needle 
@@ -131,7 +131,7 @@ and thread. From there, she became a
 cabaret singer, seamstress, hat maker, 
 and, eventually, the world's most famous 
 fashion designer." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25890&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689173280/Digital%20Library/BIG%20DREAMS/Frida_Kahlo.png" title="Frida Kahlo - Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Frida-Kahlo-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689173280/Digital%20Library/BIG%20DREAMS/Frida_Kahlo.png" alt="Frida Kahlo" title="Frida Kahlo - Isabel Sánchez Vegara
 When Frida was a teenager, a terrible 
 road accident changed her life forever. 
 Unable to walk, she began painting from 
@@ -140,7 +140,7 @@ her pain and grief, but also her passion
 for life and instinct for survival, have 
 made her one of the most famous artists 
 of the twentieth century." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25891&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689343116/Digital%20Library/BIG%20DREAMS/Ada_Lovelace.png" title="Ada Lovelace - Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Ada-Lovelace-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689343116/Digital%20Library/BIG%20DREAMS/Ada_Lovelace.png" alt="Ada Lovelace" title="Ada Lovelace - Isabel Sánchez Vegara
 As a child, Ada Lovelace had a big imagination 
 and a talent for mathematics. She grew up in a 
 noble household in England, where she dedicated 
@@ -149,14 +149,14 @@ inventor, Charles Babbage, on a very early kind
 of computer made her the world, first computer 
 programmer. This inspiring story of her life 
 features a facts and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25892&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689408844/Digital%20Library/BIG%20DREAMS/Simone_de_Beauvoir.png" title="Simon de Beauvoir - Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Simon-de-Beauvoir-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689408844/Digital%20Library/BIG%20DREAMS/Simone_de_Beauvoir.png" alt="Simon de Beauvoir" title="Simon de Beauvoir - Isabel Sánchez Vegara
 When Simone de Beauvoir was a little girl, her 
 father would proudly boast that she had the brain 
 of a man (whatever that meant!) But later, after 
 years of studying, Simone would write a book that 
 challenged the role of women in society, sending 
 shock waves around the world." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25896&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689454570/Digital%20Library/BIG%20DREAMS/Agatha_Christie.png" title="Agatha Christie - Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Agatha-Christie-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689454570/Digital%20Library/BIG%20DREAMS/Agatha_Christie.png" alt="Agatha Christie" title="Agatha Christie - Isabel Sánchez Vegara
 When Agatha Christie was young, she read 
 books every night, but always had her own 
 idea for how they should end! As an adult, 
@@ -167,7 +167,7 @@ her the queen of mystery and the best-
 selling novelist of all time. The inspiring 
 story of this imaginative author features 
 a facts and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=25897&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689539805/Digital%20Library/BIG%20DREAMS/Emmeline_Pankhurst.png" title="Emmeline Pankhurst - Lisbeth Kaiser
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD1/Emmeline-Pankhurst-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689539805/Digital%20Library/BIG%20DREAMS/Emmeline_Pankhurst.png" alt="Emmeline Pankhurst" title="Emmeline Pankhurst - Lisbeth Kaiser
    As a child, Emmeline Pankhurst was 
 inspired by books about heroes who 
 fought for others. She dedicated her 
