--- a/LP-BD2.html
+++ b/LP-BD2.html
@@ -2,7 +2,7 @@
     <tbody>
         <tr>
             <td width="440" align="left">
-                <a href="https://www.orixe.org/orixemoodle/mod/page/view.php?id=20311&amp;inpopup=1" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1566834867/Digital%20Library/BAck_buttontxa.png" alt="Go Back to Previous Menu" title="Go Back to Previous Menu" onmouseover="this.width=95;this.height=27;" style="cursor: pointer;" onmouseout="this.width=100;this.height=30" width="100" height="30"></a>
+                <a href="https://makser-books.github.io/Readers-Levels/Readers-Levels.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1566834867/Digital%20Library/BAck_buttontxa.png" alt="Go Back to Previous Menu" title="Go Back to Previous Menu" onmouseover="this.width=95;this.height=27;" style="cursor: pointer;" onmouseout="this.width=100;this.height=30" width="100" height="30"></a>
                 <p></p>
             </td>
             <td style="text-align: center;"><img src="https://res.cloudinary.com/firstterm/image/upload/v1692660155/Digital%20Library/BIG%20DREAMS/Little_People_-_BIG_DREAMS_Logo_H.png" alt="Back" width="200" height="50"></td>
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <td valign="bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Anne-Frank-Options-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689606896/Digital%20Library/BIG%20DREAMS/Anne_Frank.png" alt="Anne Frank" title="Anne Frank - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Anne-Frank-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689606896/Digital%20Library/BIG%20DREAMS/Anne_Frank.png" alt="Anne Frank" title="Anne Frank - Mª Isabel Sánchez Vegara
 Anne Frank was born in Germany to a loving 
 family. But when World War II broke out, 
 Anne and her family had to hide in a secret 
