--- a/LP-BD2/L.M.-Montgomery-Options.html
+++ b/LP-BD2/L.M.-Montgomery-Options.html
@@ -6,22 +6,21 @@
     <tbody>
         <tr>
             <td colspan="4" width="200" valign="middle">
-                <p style="font-size:22px;color:blue;text-shadow:1px 1px 1px #666;" valign="bottom" align="center">Maya Angelou</p>
+                <p style="font-size:22px;color:blue;text-shadow:1px 1px 1px #666;" valign="bottom" align="center">L. M. Montgomery</p>
             </td>
         </tr>
         <tr>
             <td colspan="4" valign="middle" align="center">
-                <img src="https://res.cloudinary.com/firstterm/image/upload/v1690628670/Digital%20Library/BIG%20DREAMS/Maya_Angelou.png" alt="Maya Angelou" title="Maya Angelou - Lisbeth Kaiser
-Maya Angelou spent much of her 
-childhood in Stamps, Arkansas. 
-After a traumatic event at age eight,
-she stopped speaking for five years. 
-However, Maya rediscovered her voice 
-through wonderful books, and went on 
-to become one of the world's most 
-beloved writers and speakers. This 
-inspiring story of her life features 
-a facts and photos section at the back." width="110" height="115">
+                <img src="https://res.cloudinary.com/firstterm/image/upload/v1690705943/Digital%20Library/BIG%20DREAMS/LM_Montgomery.png" alt="L. M. Montgomery" title="L. M. Montgomery - Mª Isabel Sánchez Vegara
+Lucy Maud Montgomery lost her mother when she 
+was very young. Left in the care of less-than-
+encouraging grandparents, she found comfort in 
+reading, writing and her imagination. When Maud 
+grew up, she wrote about the childhood she wished 
+she had, creating one of the best-loved characters 
+of all time: Anne of Green Gables. This inspiring 
+story of the Canadian author's life features a 
+facts and photos section at the back." width="110" height="115">
             </td>
         </tr>
         <tr>
@@ -37,13 +36,13 @@ a facts and photos section at the back." width="110" height="115">
         </tr>
         <tr>
             <td valign="top" height="115px">
-                <p align="center"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Maya%20Angelou/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1570051256/Digital%20Library/HTML_logo.png" onmouseover="this.width=100;this.height=105;" onmouseout="this.width=110;this.height=115" style="cursor: pointer; display: block; margin-left: auto; margin-right: auto;" alt="HTML5 Version" title="HTML5 Version" width="110" height="115"></a></p>
+                <p align="center"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/L.M.%20Montgomery/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1570051256/Digital%20Library/HTML_logo.png" onmouseover="this.width=100;this.height=105;" onmouseout="this.width=110;this.height=115" style="cursor: pointer; display: block; margin-left: auto; margin-right: auto;" alt="HTML5 Version" title="HTML5 Version" width="110" height="115"></a></p>
             </td>
             <td valign="top" height="115px">
-                <p align="center"><a href="https://gdurl.com/GE-K" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1570051256/Digital%20Library/PDFLogo.png" onmouseover="this.width=100;this.height=105;" onmouseout="this.width=110;this.height=115" style="cursor: pointer; display: block; margin-left: auto; margin-right: auto;" alt="PDF Version" title="PDF Version" width="110" height="115"></a></p>
+                <p align="center"><a href="https://gdurl.com/YKfw" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1570051256/Digital%20Library/PDFLogo.png" onmouseover="this.width=100;this.height=105;" onmouseout="this.width=110;this.height=115" style="cursor: pointer; display: block; margin-left: auto; margin-right: auto;" alt="PDF Version" title="PDF Version" width="110" height="115"></a></p>
             </td>
             <td valign="top" height="115px">
-                <p align="center"><a href="https://gdurl.com/8AwR"><img src="https://res.cloudinary.com/firstterm/image/upload/v1570051256/Digital%20Library/Epublogo.png" onmouseover="this.width=100;this.height=105;" onmouseout="this.width=110;this.height=115" style="cursor: pointer; display: block; margin-left: auto; margin-right: auto;" alt="Epub Version" title="Epub Version" width="110" height="115"></a></p>
+                <p align="center"><a href="https://gdurl.com/QzPS"><img src="https://res.cloudinary.com/firstterm/image/upload/v1570051256/Digital%20Library/Epublogo.png" onmouseover="this.width=100;this.height=105;" onmouseout="this.width=110;this.height=115" style="cursor: pointer; display: block; margin-left: auto; margin-right: auto;" alt="Epub Version" title="Epub Version" width="110" height="115"></a></p>
             </td>
         </tr>
     </tbody>
