--- a/LP-BD2/Hedy Lamarr/WebSearch/page0026.html
+++ b/LP-BD2/Hedy Lamarr/WebSearch/page0026.html
@@ -1,5 +1,5 @@
-<!-- saved from url=(0014)about:internet -->
-<html lang="en" itemscope itemtype="http://schema.org/Book">
+﻿<!-- saved from url=(0014)about:internet -->
+<html lang="en">
 
 <!-- 
 Smart developers always View Source. 
@@ -13,33 +13,21 @@ Learn more about Flex at http://flex.org
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta property="og:image" content="content/medium/page1.jpg"/>
-<meta property="og:image" content="content/medium/page2.jpg"/>
-<meta property="og:image" content="content/medium/page3.jpg"/>
-<meta property="og:image" content="content/medium/page4.jpg"/>
-<meta property="og:image" content="content/medium/page5.jpg"/>
-<meta property="og:image:width" content="768" /> 
-<meta itemprop="image" content="content/thumbs/thumb1.jpg">
-<!--  BEGIN Browser History required section -->
-<link rel="stylesheet" type="text/css" href="history/history.css" />
-<!--  END Browser History required section -->
 
+<!--  BEGIN Browser History required section -->
+<link rel="stylesheet" type="text/css" href="../history/history.css" />
+<!--  END Browser History required section -->
 <title>Hedy Lamarr</title>
-<script src="AC_OETags.js" language="javascript"></script>
+<META NAME="description" content="">
+
+<script src="../AC_OETags.js" language="javascript"></script>
 
 <!--  BEGIN Browser History required section -->
-<script src="history/history.js" language="javascript"></script>
+<script src="../history/history.js" language="javascript"></script>
 <!--  END Browser History required section -->
 
-<style type="text/css">
-  body { margin: 0px;
-         overflow:hidden;
-         background-color: #454545 ;
-	 background-image: url(content/images/bg.jpg);
-         background-repeat:no-repeat;
-         background-position:center;
-       }
-        
+<style>
+body { margin: 0px; overflow:hidden }
 </style>
 
 <script type="text/javascript">
@@ -76,7 +64,7 @@ Learn more about Flex at http://flex.org
   
   var iRegex = /android|(iP(hone|ad))/i;
   if (iRegex.test(navigator.userAgent) || isMetroIE()){
-      var url= "html5.html?", i=document.location.href.indexOf('?'); url+= i==-1 ? 'page=1' : document.location.href.substr(i+1);
+      var url= "../html5.html?", i=document.location.href.indexOf('?'); url+= i==-1 ? 'page=25' : document.location.href.substr(i+1);
       if( false &&  window.parent)
          window.parent.location=url;
       else
@@ -86,14 +74,6 @@ Learn more about Flex at http://flex.org
 
 
 <script language="JavaScript" type="text/javascript">
-
-var url= "index-h5.html#", i=document.location.href.indexOf('?'); url+= i==-1 ? 'page=1' : document.location.href.substr(i+1);
-
-if( false &&  window.parent)
-   window.parent.location=url;
-else
-   window.location =url;
-
 <!--
 // -----------------------------------------------------------------------------
 // Globals
@@ -108,21 +88,11 @@ var requiredRevision = 0;
 </script>
 </head>
 
-<body scroll="no" onload="setBrowserFocus()">
+<body bgcolor="#000000" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0" MARGINHEIGHT="0" MARGINWIDTH="0" scroll="no">
+
+
 <script language="JavaScript" type="text/javascript">
 <!--
-
-function closeMe(){return window.close();}
-
-var gotoPage = function(page){
-	if (navigator.appName.indexOf("Microsoft") != -1) {
-		return window['main'].gotoPage(page);
-	}
-	else {
-		return document['main'].gotoPage(page);
-	}
-}
-
 // Version check for the Flash Player that has the ability to start Player Product Install (6.0r65)
 var hasProductInstall = DetectFlashVer(6, 0, 65);
 
@@ -136,8 +106,6 @@ function getparafromurl() {
     parastr = url.substring(pos+1);
     return parastr;
 }
-
-function setBrowserFocus(){ document.getElementById('main').focus();}
 
 if ( hasProductInstall && !hasRequestedVersion ) {
 	// DO NOT MODIFY THE FOLLOWING FOUR LINES
@@ -167,7 +135,7 @@ if ( hasProductInstall && !hasRequestedVersion ) {
 	// if we've detected an acceptable version
 	// embed the Flash Content SWF when all tests are passed
 	AC_FL_RunContent(
-			"src", "main?page=1",
+			"src", "../main?page=26",
 			"width", "100%",
 			"height", "100%",
 			"align", "middle",
@@ -182,38 +150,18 @@ if ( hasProductInstall && !hasRequestedVersion ) {
 			"pluginspage", "http://www.adobe.com/go/getflashplayer"
 	);
   } else {  // flash is too old or we can't detect the plugin
-    var alternateContent = 'Adobe Flash Player not detected. '
-   	+ 'Redirecting to HTML5 version';
+    var alternateContent = 'Alternate HTML content should be placed here. '
+  	+ 'This content requires the Adobe Flash Player. '
+   	+ '<a href=http://www.adobe.com/go/getflash/>Get Flash</a>';
     document.write(alternateContent);  // insert non-flash content
-
-    var url= "index-h5.html#", i=document.location.href.indexOf('?'); url+= i==-1 ? 'page=1' : document.location.href.substr(i+1);
-    if( false &&  window.parent)
-       window.parent.location=url;
-    else
-       window.location =url;
   }
 // -->
 </script>
+
 <noscript>
-  	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
-			id="main" width="100%" height="100%"
-			codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
-			<param name="movie" value="main.swf" />
-			<param name="quality" value="high" />
-			<param name="allowFullScreen" value="true" />
-			<param name="bgcolor" value="#ffffff" />
-			<param name="allowScriptAccess" value="sameDomain" />
-			<embed src="main.swf" quality="high" bgcolor="#ffffff"
-				width="100%" height="100%" name="main" align="middle"
-				play="true"
-				loop="false"
-				allowFullScreen="true"
-				quality="high"
-				allowScriptAccess="sameDomain"
-				type="application/x-shockwave-flash"
-				pluginspage="http://www.adobe.com/go/getflashplayer">
-			</embed>
-	</object>
+
 </noscript>
+
+
 </body>
 </html>
