--- a/LP-BD3.html
+++ b/LP-BD3.html
@@ -55,7 +55,7 @@ community, she was elected to be the Principal
 Chief of the Cherokee Nation. This amazing story 
 of the leader and visionary features a fact and 
 photo section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Zaha Hadid-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1692308868/Digital%20Library/BIG%20DREAMS/Zaha_Hadid.png" alt="Zaha Hadid" title="Zaha Hadid - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Zaha-Hadid-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1692308868/Digital%20Library/BIG%20DREAMS/Zaha_Hadid.png" alt="Zaha Hadid" title="Zaha Hadid - Mª Isabel Sánchez Vegara
 By the age of seven, young Zaha Hadid was 
 designing her own clothes and bedroom 
 furniture. Fast-forward 40 years and Zaha 
