--- a/LP-BD2/Hedy Lamarr/html5.html
+++ b/LP-BD2/Hedy Lamarr/html5.html
@@ -1,7 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 	<title></title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="language" content="en" />
 	<meta name="description" content="" />
@@ -26,7 +27,7 @@
 			
 			
 			var _page = Request['page'];
-			_page = _page - 1; 
+			
 			
 		
 		    var browserName=navigator.userAgent.toLowerCase();
